--- a/pages/component/category/category.wxss
+++ b/pages/component/category/category.wxss
@@ -1,22 +1,20 @@
 .main{
-  height: 100%;
-}
+  width:100%;
+  height:100%;
+  display:flex;
+  overflow-x:hidden;
 
-.nav{
-  height: 13% !important;
 }
-.categroy{
+/*.categroy{
   height: 100%;
   border-top: 1rpx solid #e9e9e9;
-}
+}*/
 
 .categroy-left{
-  display: inline-block;
   width: 25%;
   height: 100%;
   box-sizing: border-box;
   border-right: 1rpx solid #e9e9e9;
-  box-sizing: border-box;
 }
 .scroll-view-left-item{
   text-align: center;
@@ -32,7 +30,7 @@
 }
 
 .categroy-right{
-  display: inline-block;
+  /*display: inline-block;*/
   width: 75%;
   height: 100%;
   box-sizing: border-box;
