--- a/pages/component/details/details.wxml
+++ b/pages/component/details/details.wxml
@@ -4,7 +4,7 @@
   <view class="food-detail-xq">
     <swiper indicator-dots="true" autoplay="true">
       <swiper-item wx:for="{{detail_data.feature_img}}">
-        <image src="{{item}}" class="food-image bigImg" mode="aspectFit" />
+        <image src="{{item}}" mode="aspectFill" />
       </swiper-item>
     </swiper>
     <view class="food-content">
