--- a/pages/component/details/details.wxss
+++ b/pages/component/details/details.wxss
@@ -28,10 +28,15 @@
   background-color: #fff;
 }
 .food-detail-xq swiper{
-  width:550rpx;
-  height:550rpx;
+  width:100%;
+  height:730rpx;
   display:block;
   margin:0 auto 10rpx auto;
+}
+.food-detail-xq swiper image{
+  width: 730rpx;
+  height: 730rpx;
+  background-color: #eee;
 }
 
 .good-box{
@@ -288,6 +293,7 @@
 }*/
 .details{
   padding-left: 30rpx;
+  box-sizing: border-box;
 }
 
 
