--- a/pages/component/category/category.wxml
+++ b/pages/component/category/category.wxml
@@ -12,13 +12,13 @@
 
 
   <view class="categroy-left">
-    <scroll-view scroll-y  style="height:{{deviceHeight}}" scroll-with-animation>
+    <scroll-view scroll-y  style="height:{{deviceHeight+'px'}}" scroll-with-animation>
       <view class="medium_font scroll-view-left-item {{curIndex === index ? 'on' : ''}}" wx:for="{{category}}" data-id="{{item.id}}" data-index="{{index}}" bindtap="switchTab">{{item.name}}</view>
     </scroll-view>
   </view>
 
   <view class="categroy-right"  >
-    <scroll-view scroll-y  style="height:{{deviceHeight}}" scroll-with-animation  bindscrolltolower="reachBottom" scroll-top="{{scrollTop}}">
+    <scroll-view scroll-y  style="height:{{deviceHeight+'px'}}" scroll-with-animation  bindscrolltolower="reachBottom" scroll-top="{{scrollTop}}">
       <navigator wx:for="{{products}}" wx:key="{{index}}" url="../details/details?id={{item.id}}" class="scroll-view-right-item border_bottom">
         <image mode="aspectFill" class="right-item-img" src="{{item.doc_image}}"/>
         <view class="right-item-view">
