--- a/pages/component/order_confirm/order_confirm.wxml
+++ b/pages/component/order_confirm/order_confirm.wxml
@@ -24,9 +24,9 @@
       <view wx:if="{{delivery_addr}}" bindtap="addAddr" class="delivery_addr-no-content">
         <view class="delivery_addr-no-list">
             <image src="../../../image/local.jpg" style="width:50px; heigh:50px;"></image>
-            <view class="addr_name normal_font">收货人:<text class="color">{{address.name}}</text></view>
-            <view class="addr_phone medium_font">电话:{{address.phone}}</view>
-            <view class="addr_detail small_font">{{address.detail}}</view>
+            <view class="addr_name normal_font">收货人：<text class="color">{{address.name}}</text></view>
+            <view class="addr_phone medium_font">电话：{{address.phone}}</view>
+            <view class="addr_detail small_font">地址：{{address.detail}}</view>
         </view>
       </view>
       <view wx:else class="delivery_addr-no-content" bindtap="addAddr">
