--- a/pages/component/order_detail/order_detail.wxml
+++ b/pages/component/order_detail/order_detail.wxml
@@ -1,7 +1,12 @@
 <view class="main">
   <view class="order-status-content bg_color">
     <text wx:if="{{order.pay_status==1}}">待付款</text>
-    <text wx:else>已支付</text>
+    <text wx:elif="{{order.order_status==5}}">已取消</text>
+    <text wx:elif="{{order.pay_status==2 && order.delivery_status==1}}">已支付</text>
+    <text wx:elif="{{order.pay_status==2 && order.delivery_status==2}}">已发货</text>
+    <text wx:elif="{{order.pay_status==3}}">已退款</text>
+    <text wx:elif="{{order.delivery_status==3}}">已退货</text>
+    <text wx:elif="{{order.order_status==3}}">已完成</text>
   </view>
   <view class="delivery-box confirm-box medium_font border_bottom2">
     <view class="delivery-top border_bottom">
