--- a/pages/component/address-edit/address-edit.wxml
+++ b/pages/component/address-edit/address-edit.wxml
@@ -21,7 +21,7 @@
                 <text>设为默认：</text>
                 <switch checked="{{ address.is_def }}" bindchange="switchChange"/>
             </view>
-            <button form-type="submit" class="bg_color">保存</button><button bindtap="toBack">取消</button>
+            <button form-type="submit" class="bg_color">保存</button><button bindtap="toDele">删除</button>
         </form>
     </view>
     <picker-view wx:if="{{isShow}}" class="picker-view" indicator-style="height: 50px;" style="width: 100%; height: 300px;" value="{{value}}" bindchange="bindChange">
@@ -36,3 +36,8 @@
         </picker-view-column>
     </picker-view>
 </view>
+
+
+
+
+
