--- a/pages/component/address-confirm/address-confirm.wxml
+++ b/pages/component/address-confirm/address-confirm.wxml
@@ -12,15 +12,24 @@
                             <radio value="{{item.name}}" checked="{{item.selected}}"/>
                         </label>
 
-                        <view class="">{{ item.name }}  {{ item.tel }}</view>
+                        <view class="weui-media-box__det">{{ item.name }}  {{ item.tel }}</view>
                         <view class="weui-media-box__desc medium_font">{{ item.address }}</view>
                         <view class="weui-media-box__info">
                             <view class="color small_font" wx:if="{{ item.is_def }}">默认地址</view>
                             <view class="color2 small_font" wx:if="{{ !item.is_def }}" bindtap="setDefalutAddress" data-id="{{ item.id }}">设为默认</view>
                         </view>
-                        <view class="edit" bindtap="toAddressEdit" data-id="{{ item.id }}">
+                        <view class="edit">
+                        <view bindtap="toAddressEdit" data-id="{{ item.id }}">
+                            <text class="small_font color2">编辑:</text>
                             <image class="icon" src="../../../image/iconfont-edit.png" />
                         </view>
+                        <view bindtap="cancelAddress" data-id="{{ item.id }}">
+                            <text class="small_font color2">删除:</text>
+                            <image class="icon" src="../../../image/iconfont-cancel.png" />
+                        </view>
+                        
+                        <!--<image class="icon" src="../../../image/iconfont-cancel.png" />-->
+                    </view>
                         
 
                     </view>
