--- a/pages/component/address-confirm/address-confirm.wxss
+++ b/pages/component/address-confirm/address-confirm.wxss
@@ -7,9 +7,7 @@
 	padding: 20rpx 70rpx 20rpx 90rpx;
 	position: relative;
 }
-.weui-media-box__desc{
-	line-height: 55rpx;
-}
+
 .cart-pro-select{
     position: absolute;
     left: 20rpx;
@@ -25,21 +23,42 @@
 
 .address-list .edit {
 	position: absolute;
-	top: 50%;
+	/*top: 50%;*/
 	right: 30rpx;
-	width: 40rpx; 
+	bottom: 10rpx;
+	/*width: 40rpx; */
     height: 40rpx;
-    -webkit-transform: translate3d(0, -50%, 0);
-    transform: translate3d(0, -50%, 0);
+	line-height: 40rpx;
+    /*-webkit-transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);*/
 }
-
+.address-list .edit view{
+	display: inline-block;
+}
+.address-list .edit view:first-child{
+	margin-right: 20rpx;
+}
 .address-list .edit .icon {
     width: 40rpx; 
     height: 40rpx;
+	vertical-align: top;
+}
+.weui-media-box__det{
+	line-height: 70rpx;
+}
+.weui-media-box__info{
+	line-height: 60rpx;
 }
 
 
 
+
+.btn-plus image{
+	width: 40rpx;
+	height: 40rpx;
+	margin-right: 10rpx;
+	vertical-align:-6rpx;
+}
 .btn-plus{
 	position: fixed;
 	bottom: 0;
@@ -51,10 +70,6 @@
 	background-color: #fff;
 	border-top: 1rpx solid #e1e1e1;
 }
-.btn-plus image{
-	width: 40rpx;
-	height: 40rpx;
-	margin-right: 10rpx;
-}
+
 
 
