--- a/pages/component/address/address.wxml
+++ b/pages/component/address/address.wxml
@@ -26,8 +26,8 @@
     </view>
 
     <view wx:if="{{isShow}}" class="pickerConfirm">
-        <text>取消</text>
-        <text>确定</text>
+        <text bindtap="onCancel">取消</text>
+        <text bindtap="onConfirm">确定</text>
     </view>
 
     <picker-view wx:if="{{isShow}}" class="picker-view" indicator-style="height: 40px;" style="width: 100%; height: 500rpx;" value="{{value}}" bindchange="bindChange">
