--- a/pages/component/user/user.wxml
+++ b/pages/component/user/user.wxml
@@ -24,7 +24,7 @@
     </view>
     <view class="address-box medium_font border_bottom2">
         <view class="address-manage border_bottom">
-            <navigator url="../address/address">我的收货地址</navigator>
+            <navigator url="../address-list/address-list">我的收货地址</navigator>
         </view>
     </view>
     <!--<view class="address-box medium_font border_bottom2">
