--- a/pages/component/order_confirm/order_confirm.wxml
+++ b/pages/component/order_confirm/order_confirm.wxml
@@ -86,8 +86,14 @@
       <view class="delivery-top border_bottom">
         <text class="fl">发票</text>
         <view class="picker fr">{{invoice_mode[index_invoice]}}</view>
+
       </view>
     </picker>
+    <view wx:if="{{index_invoice == 1}}" class="invoice-box confirm-msg confirm-box border_bottom2">
+      <view class="confirm-msg-box">
+        <input placeholder="发票抬头" bindblur="binkInvoiceText" type="text" />
+      </view>
+    </view>
   </view>
 
 
