--- a/pages/component/index.wxml
+++ b/pages/component/index.wxml
@@ -6,7 +6,7 @@
     <swiper indicator-dots="true" autoplay="true" interval="{{interval}}" duration="{{duration}}" circular="true">
       <block wx:for="{{imgUrls}}" wx:key="{{index}}">
         <swiper-item>
-          <image mode="widthFix" src="{{item}}" data-id="{{index_autoplay_imgurl[index]['category_id']}}" bindtap="tocategory" class="slide-image" />
+          <image mode="widthFix" src="{{item}}" data-type="index_autoplay_imgurl" data-index="{{index}}" bindtap="toCategory" class="slide-image" />
         </swiper-item>
       </block>
     </swiper>
@@ -14,7 +14,7 @@
   <view class="recom">
     <view class="title"><text class="color">TOP</text>{{config.index_middle_title}}</view>
     <view class="recom-top">
-      <navigator wx:for="{{index_middle_img}}" url="details/details?id={{index_middle_imgurl[index]['detail_id']}}">
+      <navigator wx:for="{{index_middle_img}}" data-type="index_middle_img" data-index="{{index}}" bindtap="toCategory">
         <image mode="aspectFill" src="{{item}}"></image>
       </navigator>
     </view>
