快递 订单修改

--- a/pages/component/details/details.wxss
+++ b/pages/component/details/details.wxss
@@ -292,7 +292,8 @@
   background-color: #913a12
 }*/
 .details{
-  padding-left: 30rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
   box-sizing: border-box;
 }
 
