--- a/app.wxss
+++ b/app.wxss
@@ -263,3 +263,27 @@ page {
 .product-nav2 .product-dec{
   color: #777;
 }*/
+.mask{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.5);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 13;
+}
+
+.contact-btn{
+  width: 36px;
+  height: 36px;
+  text-align: center;
+  line-height:30px;
+  background-color: #c71f3b; 
+  border-radius: 50%;
+  position: fixed;
+  bottom: 55px;
+  right: 15px;
+  padding-top: 8px;
+  box-sizing: border-box;
+  z-index: 99999;
+}
