--- a/pages/component/details/details.wxml
+++ b/pages/component/details/details.wxml
@@ -1,6 +1,8 @@
 <import src="../../common/nav.wxml" />
+<import src="../../common/contact.wxml" />
 <view class="main">
   <template is="nav" data="{{config}}"/>
+  <template is="contact"/>
   <view class="food-detail-xq">
     <swiper indicator-dots="true" autoplay="true">
       <swiper-item wx:for="{{detail_data.feature_img}}">
