--- a/pages/component/login/login.wxml
+++ b/pages/component/login/login.wxml
@@ -1,4 +1,6 @@
+<import src="../../common/contact.wxml" />
 <view class="container">
+  <template is="contact"/>
   <view class="loginbox">
     <view class="usermotto">
       <view class="inline-block">
@@ -13,6 +15,10 @@
       <navigator data-c_e_id="wx_navigator44bab4ab" url = "" bindtap="auto_registered">
           <text data-c_e_id="wx_text403f7ded">微信帐号自动注册</text>
       </navigator>
+      <view class="backHome" bindtap="backHome">
+        <image src="/image/backHome.png"></image>
+        <text>返回首页</text>
+      </view>
     </view>
   </view>
 </view>
