--- a/pages/component/order-list/order-list.wxml
+++ b/pages/component/order-list/order-list.wxml
@@ -1,71 +1,68 @@
 <import src="../../common/prompt.wxml"/>
+<import src="../../common/contact.wxml" />
 
-<template is="prompt" data="{{ prompt }}"/>
 
 <view class="main">
+    <template is="contact"/>
     <view class="my-list">我的订单</view>
     <view class="my-list-nav medium_font">
-        <view bindtap="changActive" data-id="0" class="{{activeIndex == 0 ? 'active':''}}">全部</view>
-        <view bindtap="changActive" data-id="1" class="{{activeIndex == 1 ? 'active':''}}">已完成</view>
-        <view bindtap="changActive" data-id="2" class="{{activeIndex == 2 ? 'active':''}}">待付款</view>
-        <view bindtap="changActive" data-id="3" class="{{activeIndex == 3 ? 'active':''}}">待发货</view>
-        <view bindtap="changActive" data-id="4" class="{{activeIndex == 4 ? 'active':''}}">待收货</view>
+        <view bindtap="changActive" data-id="all" class="{{activeIndex == 'all' ? 'active':''}}">全部</view>
+        <!-- <view bindtap="changActive" data-id="hadpay" class="{{activeIndex == 'hadpay' ? 'active':''}}">已完成</view> -->
+        <view bindtap="changActive" data-id="nopay" class="{{activeIndex == 'nopay' ? 'active':''}}">待付款</view>
+        <view bindtap="changActive" data-id="delivery" class="{{activeIndex == 'delivery' ? 'active':''}}">待发货</view>
+        <view bindtap="changActive" data-id="getit" class="{{activeIndex == 'getit' ? 'active':''}}">待收货</view>
+        <view bindtap="changActive" data-id="rating" class="{{activeIndex == 'rating' ? 'active':''}}">待评价</view>
     </view>
 
     <view class="orders-box">
+        <template is="prompt" data="{{ prompt }}"/>
         <view class="orders-list" wx:for="{{orders}}" wx:key="index">
-            <view class="orders-number color2">订单编号：{{item.number}}</view>
-            <navigator url="../order_detail/order_detail" class="orders-detail">
-                <image src="{{item.url}}"></image>
-                <view class="">{{item.name}}</view>
-                <view class="">{{item.count}}</view>
-                <text wx:if="{{item.status==0}}" class="orders-status">待付款</text>
-                <text wx:elif="{{item.status==1}}" class="orders-status">已支付</text>
-                <text wx:else="{{item.status==1}}" class="orders-status">订单取消</text>
+            <view class="orders-number color2">
+              <text>订单编号：{{item.oid}}</text>
+              <!-- <image src="/image/iconfont-cancel.png" data-id="{{item.oid}}" data-index="{{index}}" bindtap='deleteOrderList'></image> -->
+            </view>
+            <navigator url="../order_detail/order_detail?oid={{item.oid}}" class="orders-detail">
+                <image src="{{order_pro_rel[item.id][0].picurl}}"></image>
+                <view class="">{{order_pro_rel[item.id][0].product_name}}</view>
+                <view class="">{{order_pro_rel[item.id][0].amount}}</view>
+                <text wx:if="{{item.ori_status==5}}" class="orders-status color">已取消</text>
+                <text wx:elif="{{item.order_status_no==1}}" class="orders-status color">待付款</text>
+                
+                <text wx:elif="{{item.order_status_no==2 && item.delivery_status_no==1}}" class="orders-status color">待发货</text>
+                <text wx:elif="{{item.order_status_no==2 && item.delivery_status_no==2 && item.ori_status!=3}}" class="orders-status color">待收货</text>
+                <text wx:elif="{{item.order_status_no==2 && item.delivery_status_no==2 && item.ori_status==3}}" class="orders-status color">待评价</text>
+                <text wx:elif="{{item.ori_status==3}}">已完成</text>
+
+                 <text wx:elif="{{item.pay_status==3}}" class="orders-status color">已退款</text>
+                <text wx:elif="{{item.delivery_status_no==3}}" class="orders-status color">已退货</text> 
             </navigator>
             <view class="orders-footer">
-                <text><text wx:if="{{item.status==0||item.status==2}}">应付：</text><text wx:if="{{item.status==1}}">实付：</text><text class="color">￥{{item.money}}</text></text>
-                <view wx:if="{{item.status==0}}"  class="orders-btn" bindtap="payOrders">付款</view>
-                <view wx:if="{{item.status==1||item.status==2}}" class="orders-btn" bindtap="buyAgain">再次购买</view>
+
+                <view style="text-align:right;"><text>金额：</text><text class="color">￥{{item.total_amount}}</text></view>
+                <view  class="color2" style="text-align:right;">(<text>含运费：</text><text>￥{{item.ifee}}</text>)</view>
+                
+                <view class="orders-btns" wx:if="{{item.order_status_no==1&&item.ori_status!=5}}">
+                  <view class="orders-btn" data-oid="{{item.oid}}" bindtap="cancelOrders">取消订单</view>
+                  <view class="orders-btn" data-oid="{{item.oid}}" bindtap="payOrders">付款</view>
+                </view>
+                <view class="orders-btns" wx:elif="{{item.order_status_no==2 && item.delivery_status_no==1}}">
+                  <view class="orders-btn" data-oid="{{item.id}}" bindtap="remind">提醒发货</view>
+                </view>
+                <view class="orders-btns" wx:elif="{{item.ori_status==5}}">
+                  <view class="orders-btn" data-oid="{{item.oid}}" data-index="{{index}}" bindtap="deleteOrderList">删除订单</view>
+                </view>
+                
+                <view class="orders-btns" wx:elif="{{item.ori_status==2 && item.delivery_status_no==2 && item.ori_status!=3}}">
+                  <view class="orders-btn" data-oid="{{item.id}}" data-index="{{index}}" bindtap="confirmOrders">确认收货</view>
+                  <view class="orders-btn" data-oid="{{item.id}}" bindtap="viewLogistics">查看物流</view>
+                </view>
+                <view class="orders-btns" wx:elif="{{item.ori_status==2 && item.delivery_status_no==4}}">
+                  <view class="orders-btn" data-oid="{{item.oid}}" bindtap="rating">我的评价</view>
+                </view>
+                <view class="orders-btns" wx:elif="">
+                  <view class="orders-btn" data-oid="{{item.oid}}" bindtap="buyAgain">再次购买</view>
+                </view>
             </view>
         </view>
     </view>
-    <!--<view class="orders-box">
-        <view class="orders-list" wx:for="{{orders}}" wx:key="index">
-            <view class="orders-number">订单编号：{{item.oid}}</view>
-            <navigator url="../details/details" class="orders-detail">
-                <image src="{{order_pro_rel[item.id][0].picurl}}"></image>
-                <view class="">{{order_pro_rel[item.id][0].product_name}}</view>
-                <view class="">{{item.count}}</view>
-                <text wx:if="{{item.order_status_no==1}}" class="orders-status">待付款</text>
-                <text wx:elif="{{item.order_status_no==2}}" class="orders-status">已支付</text>
-                <text wx:else="{{item.order_status_no==5}}" class="orders-status">订单取消</text>
-            </navigator>
-            <view class="orders-footer">
-                <text><text wx:if="{{item.order_status_no==1||item.pay_status==1}}">应付：</text><text wx:if="{{item.order_status_no==3}}">实付：</text>￥{{item.total_amount}}</text>
-                <view wx:if="{{item.order_status_no==1}}"  class="orders-btn" data-oid="{{item.oid}}" bindtap="payOrders">付款</view>
-                <navigator url="../details/details?id={{order_pro_rel[item.id][0].product_id}}" wx:if="{{item.order_status_no==2||item.pay_status==2}}" class="orders-btn">再次购买</navigator>
-            </view>
-        </view>
-    </view>-->
-    <!--<view class="scroll-list">
-        <view class="weui-form-preview" wx:if="{{ !!order.paginate.total }}" wx:for="{{ order.items }}" wx:key="" bindtap="navigateTo" data-id="{{ item._id }}">
-            <view class="weui-form-preview__hd">
-                <view class="weui-form-preview__item">
-                    <view class="weui-form-preview__label">订单总价</view>
-                    <view class="weui-form-preview__value_in-hd">¥ {{ item.totalAmount }}</view>
-                </view>
-            </view>
-            <view class="weui-form-preview__bd">
-                <view class="weui-form-preview__item" wx:for="{{ item.items }}" wx:key="">
-                    <view class="weui-form-preview__label">{{ item.goods.name }}</view>
-                    <view class="weui-form-preview__value">x{{ item.meta.total }} ¥ {{ item.meta.totalAmount }}</view>
-                </view>
-            </view>
-            <view class="weui-form-preview__ft">
-                <navigator class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active">联系商家</navigator>
-                <navigator class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">再来一单</navigator>
-            </view>
-        </view>
-    </view>-->
 </view>
