--- a/pages/component/order-list/order-list.wxss
+++ b/pages/component/order-list/order-list.wxss
@@ -62,6 +62,13 @@
     height: 90rpx;
     line-height: 90rpx;
     border-bottom: 1rpx solid #e9e9e9;
+    display:flex;
+    justify-content:space-between;
+}
+.orders-number image{
+  width:36rpx;
+  height:36rpx;
+  margin-top:27rpx;
 }
 .orders-detail{
     position: relative;
@@ -88,16 +95,22 @@
     color: #c71f3b;
 }
 .orders-footer{
-    height: 60rpx;
-    line-height: 60rpx;
+    /* height: 60rpx;
+    line-height: 60rpx; */
     color: #2f2f2f;
     padding:15rpx 0 15rpx 0;
 }
+.orders-btns{
+  text-align: right;
+  margin-top: 20rpx;
+}
 .orders-footer .orders-btn{
-    float: right;
-    width: 170rpx;
-    height: 60rpx;
-    line-height:60rpx;
+    /* float: right; */
+    display: inline-block;
+    margin-left: 10rpx;
+    width: 200rpx;
+    height: 80rpx;
+    line-height:80rpx;
     border-radius: 6rpx;
     background: #c71f3b;
     color: #fff;
