--- a/pages/component/order_detail/order_detail.wxss
+++ b/pages/component/order_detail/order_detail.wxss
@@ -71,11 +71,11 @@
     line-height: 60rpx;
 }
 
-.orders-footer{
+/* .orders-footer{
     height: 60rpx;
     line-height: 60rpx;
     padding:15rpx 0rpx 15rpx 0;
-}
+} 
 .orders-footer .orders-btn{
     float: right;
     width: 170rpx;
@@ -84,11 +84,33 @@
     border-radius: 6rpx;
     text-align: center;
     font-size: 26rpx;
-}
+} */
 .order-status-content{
   width: 100%;
   height: 200rpx;
   line-height: 200rpx;
   padding-left: 40rpx;
-  /*box-sizing: border-box;*/
+} 
+.orders-footer{
+    /* height: 60rpx;
+    line-height: 60rpx; */
+    color: #2f2f2f;
+    padding:15rpx 0 15rpx 0;
+}
+.orders-btns{
+  text-align: right;
+  margin-top: 20rpx;
+}
+.orders-footer .orders-btn{
+    /* float: right; */
+    display: inline-block;
+    margin-left: 10rpx;
+    width: 200rpx;
+    height: 80rpx;
+    line-height:80rpx;
+    border-radius: 6rpx;
+    background: #c71f3b;
+    color: #fff;
+    text-align: center;
+    font-size: 26rpx;
 }
