--- a/pages/component/user_new/user_new.wxss
+++ b/pages/component/user_new/user_new.wxss
@@ -110,6 +110,7 @@
     border-bottom: 1rpx solid #e9e9e9;
     /*text-align: center;*/
     padding-left: 40rpx;
+    padding-right: 58rpx;
 }
 .orders::after{
     position: absolute;
@@ -122,6 +123,10 @@
     border-right: 4rpx solid #7f7f7f;
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+.orders navigator{
+  display: flex;
+  justify-content: space-between;
 }
 .orders-state{
     height: 150rpx;
@@ -141,19 +146,20 @@
     margin:0 auto;
 }
 .state-image image{
-    width: 100rpx;
+    width: 80rpx;
 }
 .state-image view{
-    position: absolute;
-    right: -3rpx;
-    top: 5rpx;
-    width: 35rpx;
-    height: 35rpx;
-    border: 1rpx solid #c71f3b;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 35rpx;
-    background-color: #fff;
+    position:absolute;
+    right:6rpx;
+    top:0rpx;
+    width:25rpx;
+    height:25rpx;
+    border:1rpx solid #c71f3b;
+    border-radius:50%;
+    text-align:center;
+    line-height:25rpx;
+    background-color:#fff;
+    font-size:22rpx;
 }
 .orders-state .state-tex{
     margin-top:-9rpx;
