--- a/pages/component/details/details.wxml
+++ b/pages/component/details/details.wxml
@@ -2,7 +2,7 @@
 <import src="../../common/contact.wxml" />
 <view class="main">
   <template is="nav" data="{{config}}"/>
-  <template is="contact"/>
+  <template wx:if="{{config.customer_service===1}}" is="contact" data="{{config}}"/>
   <view class="food-detail-xq">
     <swiper indicator-dots="true" autoplay="true">
       <swiper-item wx:for="{{detail_data.feature_img}}">
