--- a/pages/component/order_confirm/order_confirm.wxml
+++ b/pages/component/order_confirm/order_confirm.wxml
@@ -2,7 +2,7 @@
 <view class="main">
   <template wx:if="{{config.customer_service===1}}" is="contact" data="{{config}}"/>
   <view class="orders-list confirm-box border_bottom2">
-      <view class="orders-number color2 border_bottom">订单编号：{{oid}}</view>
+      <!--<view class="orders-number color2 border_bottom">订单编号：{{oid}}</view>-->
       <navigator wx:for="{{carts}}" url="../details/details?id={{item.cid||item.id}}" class="orders-detail border_bottom">
           <image src="{{item.image||item.product_thumb}}"></image>
           <view class="">{{item.title||item.product_name}}</view>
@@ -115,7 +115,7 @@
 
   <view class="confirm-footer">
       <text class="cart-toatl-price">实付款:<text class="color strong">￥{{total_price}}</text></text>
-      <text class="confirm-pay bg_color" bindtap="lastPay">确认支付</text>
+      <text class="confirm-pay bg_color" bindtap="submitOrder">提交订单</text>
   </view>
 
 
