--- a/pages/component/index.wxml
+++ b/pages/component/index.wxml
@@ -28,7 +28,7 @@
       <view class="title">{{config.product_title}}</view>
     </view>
     <view class="product-display-ul">
-      <template is="product_list" data="{{products}}" />
+      <template is="product_list" data="{{products,config}}" />
       <view wx:if="{{hadmore}}" class="load_more medium_font" bindtap="load_more">加载更多</view>
     </view>
   </view>
