--- a/pages/common/productList.wxml
+++ b/pages/common/productList.wxml
@@ -6,7 +6,7 @@
           <text class="product-name color">{{item.title}}</text>
           <text class="product-dec">{{item.intro}}</text>
           <text class="product-price bg_color">￥{{item.price}}</text>
-          <view class="directAddCart" data-id="{{item.id}}" catchtap="directAddCart">
+          <view wx:if="{{config.shopping_cart == 1}}" style="background-color:{{config.shopping_cart_bgcolor}}" class="directAddCart" data-id="{{item.id}}" catchtap="directAddCart">
             <image src="/image/shop-cart.png"></image>
           </view>
         </navigator>
