--- a/pages/component/order_confirm/order_confirm.wxml
+++ b/pages/component/order_confirm/order_confirm.wxml
@@ -19,7 +19,7 @@
     <picker bindchange="bindPickerChange" value="{{index}}" range="{{delivery_mode}}">
       <view class="delivery-top border_bottom">
         <text class="fl">配送方式</text>
-        <view class="picker fr"><text>{{delivery_mode[index]}}</text><text wx:if="{{delivery_title}}" class="color">{{delivery_title}}+￥{{ifee||0}}</text></view>
+        <view class="picker fr"><text wx:if="{{!delivery_title}}">请选择</text><text>{{delivery_mode[index]}}</text><text wx:if="{{delivery_title}}" class="color">{{delivery_title}}+￥{{ifee||0}}</text></view>
       </view>
     </picker>
     <view class="delivery-middle border_bottom" wx:if="{{index_mode>0||!dis_key}}">
