--- a/pages/component/ratings/ratings.wxml
+++ b/pages/component/ratings/ratings.wxml
@@ -9,7 +9,7 @@
   </view>
 
   <view class="ratings-bottom confirm-box medium_font border_bottom2">
-    <textarea auto-height wx:if="{{submit}}" placeholder="宝贝满足你的期待吗？说说他的优点和美中不足的地方吧。" bindblur="binkContentConfirm" />
+    <textarea auto-height wx:if="{{submit}}" placeholder="宝贝满足你的期待吗？说说他的优点和缺点吧。" bindblur="binkContentConfirm" />
     <textarea auto-height wx:else value="{{content}}" disabled="true" />
   </view>
   <view class="ratings-btn">
